Improve ImageJ Roi conversion
Fixes https://github.com/qupath/qupath/issues/1674
Also add "Non-rectangles only" as an option when sending ROIs to ImageJ, since rectangles tend to correspond to the entire image region... and do more harm than good.