@@ -36,6 +36,7 @@ import java.awt.Rectangle;
 import java.awt.image.BufferedImage;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -43,8 +44,7 @@ import javax.swing.SwingUtilities;
 
 import javafx.beans.property.BooleanProperty;
 import javafx.beans.property.DoubleProperty;
-import javafx.beans.property.SimpleDoubleProperty;
-import javafx.beans.property.SimpleStringProperty;
+import javafx.beans.property.ObjectProperty;
 import javafx.beans.property.StringProperty;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -68,6 +68,7 @@ import qupath.lib.objects.PathObjectTools;
 import qupath.lib.objects.hierarchy.PathObjectHierarchy;
 import qupath.lib.plugins.parameters.ParameterList;
 import qupath.lib.regions.RegionRequest;
+import qupath.lib.roi.RectangleROI;
 import qupath.lib.roi.interfaces.ROI;
 
 /**
@@ -83,14 +84,42 @@ import qupath.lib.roi.interfaces.ROI;
 class ExtractRegionCommand implements Runnable {
 	
 	private static Logger logger = LoggerFactory.getLogger(ExtractRegionCommand.class);
-	
+
+	/**
+	 * Enum to control whether ROIs are included when sending regions to ImageJ.
+	 */
+	public enum RoiInclude {
+		/**
+		 * Include all ROIs
+		 */
+		YES,
+		/**
+		 * Include no ROIs
+		 */
+		NO,
+		/**
+		 * Only include non-rectangular ROIs.
+		 * Because the image is a rectangle, a rectangular ROI includes the entire image -
+		 * so is often not very useful.
+		 */
+		NON_RECTANGLE;
+
+		public String toString() {
+			return switch (this) {
+				case YES -> "Yes";
+				case NO -> "No";
+				case NON_RECTANGLE -> "Non-rectangles only";
+			};
+		}
+	}
+
 	private QuPathGUI qupath;
 	
 	private static final String PIXELS_UNIT = "Pixels (downsample)";
 	
 	private DoubleProperty resolution = PathPrefs.createPersistentPreference("ext.ij.extract.resolution", 1.0);
 	private StringProperty resolutionUnit = PathPrefs.createPersistentPreference("ext.ij.extract.resolutionUnit", PIXELS_UNIT);
-	private BooleanProperty includeROI = PathPrefs.createPersistentPreference("ext.ij.extract.includeROI", true);
+	private ObjectProperty<RoiInclude> includeROI = PathPrefs.createPersistentPreference("ext.ij.extract.includeROI", RoiInclude.YES, RoiInclude.class);
 	private BooleanProperty includeOverlay = PathPrefs.createPersistentPreference("ext.ij.extract.includeOverlay", true);
 	private BooleanProperty doTransforms = PathPrefs.createPersistentPreference("ext.ij.extract.doTransforms", false);
 	private BooleanProperty doZ = PathPrefs.createPersistentPreference("ext.ij.extract.doZ", false);
@@ -136,13 +165,13 @@ class ExtractRegionCommand implements Runnable {
 		ParameterList params = new ParameterList()
 				.addDoubleParameter("resolution", "Resolution", resolution.get(), null, "Resolution at which the image will be exported, defined as the 'pixel size' in Resolution units")
 				.addChoiceParameter("resolutionUnit", "Resolution unit", resolutionUnit, unitOptions, "Units defining the export resolution; if 'pixels' then the resolution is the same as a downsample value")
-				.addBooleanParameter("includeROI", "Include ROI", includeROI.get(), "Include the primary object defining the exported region as an active ROI in ImageJ")
+				.addChoiceParameter("includeROI", "Include ROI", includeROI.get(), Arrays.asList(RoiInclude.values()), "Include the primary object defining the exported region as an active ROI in ImageJ")
 				.addBooleanParameter("includeOverlay", "Include overlay", includeOverlay.get(), "Include any objects overlapping the exported region as ROIs on an ImageJ overlay")
 				.addBooleanParameter("doTransforms", "Apply color transforms", doTransforms.get(), "Optionally apply any color transforms when sending the pixels to ImageJ")
 				.addBooleanParameter("doZ", "All z-slices", doZ.get(), "Optionally include all slices of a z-stack")
 				.addBooleanParameter("doT", "All timepoints", doT.get(), "Optionally include all timepoints of a time series")
 				;
-		
+
 //		params.setHiddenParameters(unitOptions.size() <= 1, "resolutionUnit");
 		params.setHiddenParameters(server.nZSlices() == 1, "doZ");
 		params.setHiddenParameters(server.nTimepoints() == 1, "doT");
@@ -153,7 +182,7 @@ class ExtractRegionCommand implements Runnable {
 		// Parse values - store as local variables now, make persistent later
 		double resolution = params.getDoubleParameterValue("resolution");
 		resolutionUnit = (String)params.getChoiceParameterValue("resolutionUnit");
-		boolean includeROI = params.getBooleanParameterValue("includeROI");
+		RoiInclude includeROI = (RoiInclude)params.getChoiceParameterValue("includeROI");
 		boolean includeOverlay = params.getBooleanParameterValue("includeOverlay");
 		boolean doTransforms = params.getBooleanParameterValue("doTransforms");
 		boolean doZ = params.getBooleanParameterValue("doZ");
@@ -246,7 +275,14 @@ class ExtractRegionCommand implements Runnable {
 				if (pathObjects.size() == 1 && !Dialogs.showYesNoDialog("Send region to ImageJ", String.format("Attempting to extract this region is likely to require > %.2f MB - are you sure you want to continue?", memory/1024/1024)))
 					return;
 			}
-			
+
+			// Determine if we really do what to send the ROI
+			boolean doIncludeRoi = switch (includeROI) {
+				case NON_RECTANGLE -> roi != null && !(roi instanceof RectangleROI);
+				case YES -> true;
+				case NO -> false;
+			};
+
 			// We should switch to the event dispatch thread when interacting with ImageJ
 			try {
 				ImagePlus imp;
@@ -255,7 +291,7 @@ class ExtractRegionCommand implements Runnable {
 				if (zEnd - zStart > 1 || tEnd - tStart > 1) {
 					// TODO: Handle overlays
 					imp = IJTools.extractHyperstack(server, region, zStart, zEnd, tStart, tEnd);
-					if (includeROI && roi != null) {
+					if (doIncludeRoi && roi != null) {
 						Roi roiIJ = IJTools.convertToIJRoi(roi, imp.getCalibration(), region.getDownsample());
 						imp.setRoi(roiIJ);
 					}
@@ -279,23 +315,22 @@ class ExtractRegionCommand implements Runnable {
 							imp.setOverlay(overlay);
 					}
 				} else if (includeOverlay)
-					imp = IJExtension.extractROIWithOverlay(server, pathObject, hierarchy, region, includeROI, options).getImage();			
+					imp = IJExtension.extractROIWithOverlay(server, pathObject, hierarchy, region, doIncludeRoi, options).getImage();
 				else
-					imp = IJExtension.extractROIWithOverlay(server, pathObject, null, region, includeROI, options).getImage();			
+					imp = IJExtension.extractROIWithOverlay(server, pathObject, null, region, doIncludeRoi, options).getImage();
 				
 				// Set display ranges and invert LUTs if we should (and can)
 				boolean invertLUTs = imageDisplay.useInvertedBackground();
 				// We can't set the LUTs for an RGB image in ImageJ
 //				if (invertLUTs)
 //					imp = CompositeConverter.makeComposite(imp);
-				if (viewer != null && imp instanceof CompositeImage) {
+				if (imp instanceof CompositeImage impComp) {
 					var tempChannels = channels == null ? imageDisplay.availableChannels() : channels;
 					var availableSingleChannels = tempChannels.stream()
 							.filter(c -> c instanceof SingleChannelDisplayInfo)
 							.map(c -> (SingleChannelDisplayInfo)c)
 							.toList();
 					
-					CompositeImage impComp = (CompositeImage)imp;
 					// If we're displaying with an inverted background, we need to set this property for the composite mode
 					if (invertLUTs) {
 						impComp.setProp("CompositeProjection", "invert");
@@ -329,7 +364,7 @@ class ExtractRegionCommand implements Runnable {
 					}
 				} else if (selectedChannels.size() == 1 && imp.getType() != ImagePlus.COLOR_RGB) {
 					// Setting the display range for non-RGB images can give unexpected results (changing pixel values)
-					var channel = selectedChannels.get(0);
+					var channel = selectedChannels.getFirst();
 					imp.setDisplayRange(channel.getMinDisplay(), channel.getMaxDisplay());
 				}
 				imps.add(imp);
